# nuclia.py

./: .coveragerc  .gitignore  .python-version  CHANGELOG.md  CODEOWNERS  LICENSE  MANIFEST.in  Makefile  README.md  RELEASE.md  VERSION  code-requirements.txt  pyproject.toml  requirements.txt  ruff.toml  setup.py  test-requirements.txt  tmp.py
.github/: .codecov.yml  renovate.json
.github/workflows/: bd_sca_scanner.yml  bump.yml  delete.yml  docs.yml  nuclia.yml  polaris.yaml  prepare-release.yml  prod.yml  release.yml  stage.yml  tmp.yml  trufflehog.yaml  windows.yml
docs/: 01-README.md  02-auth.md  03-default.md  03-kb.md  04-upload.md  05-extract.md  05-search.md  06-read.md  06-search.md  07-conversation.md  07-nua.md  08-import-export.md  09-kb-backup.md  09-manage.md  10-activity-log.md  10-manage.md  11-activity-log.md  11-agents.md  12-ai-agents.md  13-ai-agents.md  14-rao.md  15-memory.md  AUTH.md  CONVERSATION.md  EXTRACT.md  README.md  SEARCH.md  UPLOAD.md
examples/: hr_buddy_demo.py  hr_buddy_demo_2.py  locomo_demo.py
nuclia/: __init__.py  config.py  data.py  decorators.py  exceptions.py  urls.py
nuclia.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
nuclia/cli/: accounts.py  auth.py  kb.py  kbs.py  nua.py  nuas.py  run.py  search.py  upload.py  utils.py  zones.py
nuclia/lib/: agent.py  conversations.py  kb.py  langchain.py  models.py  nua.py  nua_chat.py  nua_responses.py  nuclia_nua_chat.py  tasks.py  utils.py
nuclia/sdk/: __init__.py  accounts.py  activity_logs.py  agent.py  agent_cli.py  agent_sessions.py  agents.py  auth.py  backup.py  export_import.py  extract_strategy.py  kb.py  kbs.py  kv_schemas.py  logger.py  logs.py  memory.py  nua.py  nuas.py  nucliadb.py  oauth.py  predict.py  process.py  remi.py  resource.py  search.py  split_strategy.py  task.py  train.py  upload.py  zones.py
nuclia/sdk/memory/: __init__.py  exceptions.py  memory.py  models.py  utils.py
nuclia/tests/: conftest.py  fixtures.py  test_auth.py  test_conversation.py  test_predict.py  test_resource.py  utils.py
nuclia/tests/assets/: conversation.json
nuclia/tests/test_agent/: test_cli.py  test_interact.py  test_sessions.py
nuclia/tests/test_kb/: test_backup.py  test_configuration.py  test_conversation.py  test_export_import.py  test_extract_strategies.py  test_graph.py  test_kv_schemas.py  test_labels.py  test_logs.py  test_remi.py  test_resource.py  test_search.py  test_split_strategies.py  test_tasks.py  test_upload.py
nuclia/tests/test_manage/: test_account.py  test_agent.py  test_auth.py  test_kb.py
nuclia/tests/test_memory/: test_memory_basic.py
nuclia/tests/test_nua/: test_agent.py  test_predict.py
nuclia/tests/test_nucliadb/: test_crud.py
nuclia/tests/unit/: test_cli_utils.py  test_config.py  test_config_models.py  test_data.py  test_decorators.py  test_decorators_account.py  test_exceptions.py  test_export_import.py  test_kbs.py  test_kbs_management.py  test_lib_kb_client.py  test_lib_models.py  test_lib_nua_chat.py  test_lib_nua_client.py  test_lib_utils.py  test_memory.py  test_nua_responses.py  test_oauth.py  test_sdk_agent_sessions.py  test_sdk_auth_base.py  test_sdk_auth_http.py  test_sdk_misc.py  test_sdk_remi.py  test_sdk_search.py  test_sdk_task.py  test_search.py  test_url_resolution.py  test_zone_routing.py
